src/test/ui/issues/issue-60622.stderr
error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/issue-60622.rs:12:11
   |
LL |     fn a(&self) {}
   |          - the late bound lifetime parameter is introduced here
...
LL |     b.a::<'_, T>();
   |           ^^
   |
note: the lint level is defined here
  --> $DIR/issue-60622.rs:3:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(late_bound_lifetime_arguments)]` implied by `#[deny(warnings)]`
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42868 <https://github.com/rust-lang/rust/issues/42868>

error[E0107]: this associated function takes 0 type arguments but 1 type argument was supplied
  --> $DIR/issue-60622.rs:12:7
   |
LL |     b.a::<'_, T>();
   |       ^     --- help: remove this type argument
   |       |
   |       expected 0 type arguments
   |
note: associated function defined here, with 0 type parameters
  --> $DIR/issue-60622.rs:8:8
   |
LL |     fn a(&self) {}
   |        ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
